2019. 7.26. Added zFrame3DFromZTK and zFrame3DDHFromZTK. [zeo_frame]
2019. 7.26. Added zMat3DFromZTK. [zeo_mat3d]
2019. 7.26. Added zVec6DFromZTK. [zeo_vec6d]
2019. 7.25. Renamed zTerraFree to zTerraDestroy. [zeo_map_terra]
2019. 7.25. Renamed zeo_terra to zeo_map_terra. [zeo_map_terra]
2019. 7.25. Redesigned zMap class and added zMapNet class. [zeo_map, zeo_mapnet]
2019. 7.24. Modified _zShape3DTypeFromZTK. [zeo_shape]
2019. 7.24. Modified _zShape3DOpticFromZTK to ignore unidentified optical info. [zeo_shape]
2019. 7.24. Modified zSphere3DFit. [zeo_shape_sphere]
2019. 7.24. Debugged zeo_shape_ellips3d_com. [zeo_shape_ellips]
2019. 7.24. Debugged zCyl3DInertia. [zeo_shape_cyl]
2019. 7.24. Added _zMat3DSqrNorm, zMat3DSqrNorm, _zMat3DNorm and zMat3DNorm. [zeo_mat3d]
2019. 7.24. Debugged zCone3DInertia. [zeo_shape_cone]
2019. 7.24. Added zVec3DOrthoNormalSpace. [zeo_vec3d]
2019. 7.23. Debugged _zShape3DTypeFromZTK. [zeo_shape]
2019. 7.23. Added z*3DAlloc. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs]
2019. 7.23. Added _alloc member in zShape3DCom and debugged _zShape3DTypeFromZTK and zShape3DFScan. [zeo_shape]
2019. 7.23. Reallocated zShape3DCreate*() methods to each subclass module. [zeo_shape, zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs]
2019. 7.23. Abolished zShape3DBB member and restructured zeo_bv above zeo_shape. [zeo_shape, zeo_bv]
2019. 7.23. Abolished zeo_prim and redesigned zShape3D class and children classes. zShapeType, zShapeBody, zShapeTypeExpr and zShapeTypeByStr also abolished. [zeo_errmsg, zeo_nurbs, zeo_box, zeo_shape, zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs, zeo_bv, app]
2019. 7.19. Moved zOpticArray from zeo_mshape to zeo_optic and renamed it to zOpticalInfoArray. [zeo_mshape, zeo_optic]